--- a/javascript/date-picker/style.css
+++ b/javascript/date-picker/style.css
@@ -5,3 +5,16 @@ body {
     margin: 0;
     padding: 0;
 }
+
+.container {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    width: 100%;
+}
+
+.picker {
+    width: 300px;
+    height: 300px;
+    background-color: aqua;
+}
