--- a/javascript/date-picker/style.css
+++ b/javascript/date-picker/style.css
@@ -4,17 +4,46 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
-    display: flex;
-    align-items: center;
-    align-content: center;
     width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .picker {
-    width: 300px;
-    height: 300px;
-    background-color: aqua;
+
+    width: fit-content;
+    padding: 30px;
+    height: 200px;
+    background-color: #eee;
+    border: solid 5px #770770;
+    border-radius: 10px;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* Styles for the date picker */
+#datepicker {
+    padding: 8px;
+    width: calc(100% - 16px);
+    margin-top: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+h2 { 
+    text-align: center;
+}
+div {
+    padding-top: 30px;
 }
